Fixed send email. Add JWT and login

--- a/backend/api/templates/email_template/reservation_confirmation.html
+++ b/backend/api/templates/email_template/reservation_confirmation.html
@@ -166,7 +166,7 @@
                                                                                 Number of People</td>
                                                                             <td width="50%"
                                                                                 style="vertical-align: top; padding: 10px; word-break: break-word; border-top: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; border-left: 1px solid #dddddd;">
-                                                                                N/A</td>
+                                                                                {{ number_of_people }}</td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td width="50%"
